--- a/contact_us.css
+++ b/contact_us.css
@@ -15,7 +15,7 @@
 .a{
     padding: 7px;
     margin: 10px;
-    width: auto;
+    width: fit-content;
     background-color: hotpink;
     float: inline-end;
     border:  5px double rgb(71, 34, 71);
@@ -33,7 +33,7 @@
 input [type="text"],
 input [type="email"],
 select,textarea{
-    width : 70%;
+    width : auto;
 padding: 12px;
 border: 1px solid lightgrey;
 border-radius: 10px;
@@ -49,7 +49,7 @@ fieldset{
     color:black;
     background-color: tomato;
     border: 1px solid rgb(155, 135, 135);
-    width : 70%;
+    width : auto;
     padding: 12px;
     padding-bottom: 3px;
     border-radius: 6px;
@@ -61,7 +61,7 @@ input[type="submit"]
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
-    width: 30%;
+    width: fit-content;
     cursor: pointer;
     
 }
